# Socket_Test2_Threading

./: pyproject.toml
src/project_test_socket2/Client/: client.py
src/project_test_socket2/Server/: server.py
